--- a/src/resources/views/currentWeather.fxml
+++ b/src/resources/views/currentWeather.fxml
@@ -7,6 +7,10 @@
 <?import javafx.scene.shape.SVGPath?>
 
 <GridPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.WeatherControllerCurrent">
+    <properties>
+        <!-- store controller at key "control" in properties map -->
+        <control><fx:reference source="controller" /></control>
+    </properties>
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
