--- a/src/main/resources/info.tylerbauer.rpislideshow/main.fxml
+++ b/src/main/resources/info.tylerbauer.rpislideshow/main.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" styleClass="container" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java.controllers.MainController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" styleClass="container" xmlns="http://javafx.com/javafx/8.0.121"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="info.tylerbauer.rpislideshow.controllers.MainController">
    <stylesheets>
       <URL value="@views/style.css" />
    </stylesheets>
